[package]
authors = ["Zeyla Hellyer <zeyla@hellyer.dev>"]
edition = "2021"
homepage = "https://github.com/zeylahellyer/read-gpx-cli"
name = "read-gpx"
publish = false
repository = "https://github.com/zeylahellyer/read-gpx-cli.git"
version = "0.1.0"

[dependencies]
anyhow = { default-features = false, features = ["std"], version = "1" }
serde = { default-features = false, features = ["derive"], version = "1" }
quick-xml = { default-features = false, features = ["serialize"], version = "0.31" }
time = { default-features = false, features = ["formatting", "local-offset", "parsing", "serde"], version = "0.3" }
